docs: post subscriptions handler
